# zip-code-area

./: .gitignore  Makefile  README.md  pyproject.toml  tasks.py
.github/workflows/: release.yml
data/: zipcodes.csv
src/: data.py  interior.py  main.py  map.py  surrounding.py  zip_code.py
zip_code_area/: __init__.py  __main__.py  data.py  interior.py  map.py  surrounding.py  zip_code.py
