[tool.poetry]
name = "zip-code-area"
version = "1.0.0"
description = ""
authors = ["Dawson Booth <github@dawsonbooth.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/dawsonbooth/zip-code-area"
repository = "https://github.com/dawsonbooth/zip-code-area"
keywords = []
classifiers = [
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
include = [
    "LICENSE",
]

packages = [
    { include = "zip_code_area" },
]

[tool.poetry.scripts]
zip-code-area = 'zip_code_area.__main__:main'

[tool.poetry.dependencies]
python = "^3.5"
geopy = "^2.0.0"
tqdm = "^4.48.2"

[tool.poetry.dev-dependencies]
pytest = "^5.3.2"
autopep8 = "^1.5"
pylint = "^2.4.4"
pyinstaller = "^3.6"
rope = "^0.17.0"
invoke = "^1.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
