[tool.poetry]
name = "zip-code-area"
version = "1.0.0"
description = ""
authors = ["Dawson Booth <github@dawsonbooth.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/dawsonbooth/zip-code-area"
repository = "https://github.com/dawsonbooth/zip-code-area"
keywords = []
classifiers = [
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
include = [
    "LICENSE",
]

packages = [
    { include = "zip_code_area" },
]

[tool.poetry.scripts]
zip-code-area = 'zip_code_area.__main__:main'

[tool.poetry.dependencies]
python = "^3.6"
geopy = "^2.0.0"
tqdm = "^4.48.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
rope = "^0.18.0"
mkdocs = "^1.1.2"
pydoc-markdown = "^3.9.0"
invoke = "^1.5.0"
pyclean = "^2.0.0"
black = "^20.8b1"
flake8 = "^3.8.4"
mypy = "^0.790"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
